--- a/K-Scope/Host/dialog.ui
+++ b/K-Scope/Host/dialog.ui
@@ -308,6 +308,13 @@
               </property>
              </widget>
             </item>
+            <item row="0" column="0">
+             <widget class="QCheckBox" name="Dif">
+              <property name="text">
+               <string>Dif</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </item>
